build/log/idf_py_stdout_output_14728
[1/10] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D D:\esp\lthtn\build\bootloader\esp-idf\esptool_py && D:\esp\Espressif\python_env\idf5.0_py3.8_env\Scripts\python.exe D:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/esp/lthtn/build/bootloader/bootloader.bin"
Bootloader binary size 0x6710 bytes. 0x8f0 bytes (8%) free.
[2/8] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/app_http_server.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/app_http_server.c.obj 
ccache D:\esp\Espressif\tools\xtensa-esp32-elf\esp-2022r1-11.2.0\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe -DMBEDTLS_CONFIG_FILE=\"mbedtls/esp_config.h\" -ID:/esp/lthtn/build/config -ID:/esp/lthtn/main -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/newlib/platform_include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/freertos/FreeRTOS-Kernel/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/freertos/esp_additions/include/freertos -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/freertos/esp_additions/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/include/soc -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/include/soc/esp32 -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/port/esp32/. -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/esp_hw_support/port/esp32/private_include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/heap/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/log/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/soc/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/soc/esp32/. -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/soc/esp32/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/hal/esp32/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/hal/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/hal/platform_port/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/esp_rom/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/esp_rom/include/esp32 -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/esp_rom/esp32 -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/esp_common/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/esp_system/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/esp_system/port/soc -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/esp_system/port/include/private -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/xtensa/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/xtensa/esp32/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/include/apps -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/include/apps/sntp -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/lwip/src/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/port/esp32/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/lwip/port/esp32/include/arch -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/wifi_provisioning/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/protocomm/include/common -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/protocomm/include/security -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/protocomm/include/transports -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/esp_timer/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/esp_wifi/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/esp_event/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/esp_phy/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/esp_phy/esp32/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/esp_netif/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/nvs_flash/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/esp_partition/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/esp_eth/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/driver/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/driver/deprecated -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/driver/esp32/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/esp_pm/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/esp_ringbuf/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/esp-tls -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/esp-tls/esp-tls-crypto -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/mbedtls/port/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/mbedtls/mbedtls/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/mbedtls/mbedtls/library -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/mbedtls/esp_crt_bundle/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/esp_http_server/include -ID:/esp/Espressif/frameworks/esp-idf-v5.0.1/components/http_parser -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=D:/esp/lthtn=. -fmacro-prefix-map=D:/esp/Espressif/frameworks/esp-idf-v5.0.1=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"v5.0.1-dirty\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -Wno-format -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/app_http_server.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\app_http_server.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/app_http_server.c.obj -c D:/esp/lthtn/main/app_http_server.c
D:/esp/lthtn/main/app_http_server.c: In function 'http_request_handle':
D:/esp/lthtn/main/app_http_server.c:32:17: warning: assignment discards 'const' qualifier from pointer target type [-Wdiscarded-qualifiers]
   32 |     request.uri = req->uri;
      |                 ^
D:/esp/lthtn/main/app_http_server.c: In function 'maylanh_data_handler':
D:/esp/lthtn/main/app_http_server.c:204:58: error: expected ';' before '}' token
  204 |         ESP_LOGI(TAG,"May lanh mo. Nhiet do: %d",temp_ac)};
      |                                                          ^
D:/esp/lthtn/main/app_http_server.c:207:9: error: expected ';' before '}' token
  207 |         };
      |         ^
D:/esp/lthtn/main/app_http_server.c:218:13: error: invalid storage class for function 'temp_maylanh_data_handler'
  218 | static void temp_maylanh_data_handler(char*data, int data_len)
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~
D:/esp/lthtn/main/app_http_server.c: In function 'temp_maylanh_data_handler':
D:/esp/lthtn/main/app_http_server.c:226:5: error: expected ';' before '}' token
  226 |     };
      |     ^
D:/esp/lthtn/main/app_http_server.c:238:13: error: invalid storage class for function 'http_request_task'
  238 | static void http_request_task(void *pvParameters) {
      |             ^~~~~~~~~~~~~~~~~
D:/esp/lthtn/main/app_http_server.c:268:13: error: invalid storage class for function 'uart_event_task'
  268 | static void uart_event_task(void *pvParameters)
      |             ^~~~~~~~~~~~~~~
D:/esp/lthtn/main/app_http_server.c: In function 'uart_event_task':
D:/esp/lthtn/main/app_http_server.c:271:12: warning: unused variable 'buffered_size' [-Wunused-variable]
  271 |     size_t buffered_size;
      |            ^~~~~~~~~~~~~
D:/esp/lthtn/main/app_http_server.c: In function 'temp_maylanh_data_handler':
D:/esp/lthtn/main/app_http_server.c:364:1: error: expected declaration or statement at end of input
  364 | }
      | ^
D:/esp/lthtn/main/app_http_server.c: In function 'maylanh_data_handler':
D:/esp/lthtn/main/app_http_server.c:364:1: error: expected declaration or statement at end of input
D:/esp/lthtn/main/app_http_server.c:364:1: error: expected declaration or statement at end of input
At top level:
D:/esp/lthtn/main/app_http_server.c:358:6: warning: 'stop_webserver' defined but not used [-Wunused-function]
  358 | void stop_webserver(void)
      |      ^~~~~~~~~~~~~~
D:/esp/lthtn/main/app_http_server.c:321:6: warning: 'start_webserver' defined but not used [-Wunused-function]
  321 | void start_webserver()
      |      ^~~~~~~~~~~~~~~
D:/esp/lthtn/main/app_http_server.c:268:13: warning: 'uart_event_task' defined but not used [-Wunused-function]
  268 | static void uart_event_task(void *pvParameters)
      |             ^~~~~~~~~~~~~~~
ninja: build stopped: subcommand failed.
